...
                    clickAction = onItemClicked,
                    lazyGridState = lazyGridState
                )
            }

            is OperationStateResult.Error -> {
                ErrorAlertDialog(
                    error = result.message,
                    buttonAction = { viewModel.getFavoriteBreeds() }
                )
            }

            is OperationStateResult.Loading -> {
...
    Row(
        modifier = Modifier
            .fillMaxWidth(),
        verticalAlignment = Alignment.CenterVertically
    ) {
        Text(
            text = "My Cats App",
            style = MaterialTheme.typography.titleLarge,
            fontWeight = FontWeight.ExtraBold,
            fontSize = 25.sp,
        )
    }
}
...
